[package]
name = "barter-iron-condor"
version = "0.1.0"
edition = "2024"
authors = []
description = "Paper trading engine for 0DTE options backtesting for different strategies"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "2.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports", "async_tokio"] }
